[OKTA-4] Fix